completed skeleton for skills,work and contact pages

--- a/contact.html
+++ b/contact.html
@@ -20,15 +20,16 @@
                 <form action="#" class="contact-form">
                     <input type="text" placeholder="Full Name" required>
                     <input type="email" placeholder="Email" required>
-                    <input type="text" placeholder="Number" required>
+                    <input type="number" placeholder="Number" required>
                     <textarea placeholder="Your Message" required></textarea>
                     <button type="submit" class="send-btn">Send Message</button>
                 </form>
             </div>
-            <div class="contact-image">
-                <!-- <img src="images/contact-image.png" alt="Contact Image"> -->
-            </div>
+            
         </div>
     </section>
+    <div class="contact-image">
+        <!-- <img src="./Img/Man_Working.png" alt="Contact Image"> -->
+    </div>
 </body>
 </html>
