--- a/work.html
+++ b/work.html
@@ -11,8 +11,8 @@
     <div class="container-wrapper">
         <h1 class="section-title">My Working Experience</h1>
         <!-- First Row: Wipro, Mobius, MSys -->
-        <div class="experience-section">
-            <div class="experience-card">
+        <div class="experience-section">  
+            <div class="experience-card-firstrow"> <!--just splitted this section as first row and second row for container alignment, we can give universal class name if get even container list. -->
                 
                 <h2 class="company">Wipro Technologies</h2>
                 <h3 class="role">Role: Python Automation Engineer</h3>
@@ -38,7 +38,7 @@
                 <p><strong>Tech Stack:</strong> Python, Django, REXX, DB2, HTML, SQL, JCL, ATM Servers.</p>
             </div>
 
-            <div class="experience-card">
+            <div class="experience-card-firstrow">
                 <h2 class="company">Mobius Knowledge</h2>
                 <h3 class="role">Role: Senior Software Engineer</h3>
                 <img src="./Img/Work/Mobius_logo.png" class="Mobius-logo" alt="Mobius logo">
@@ -59,7 +59,7 @@
                 <p><strong>Tech Stack:</strong> Scrapy & Selenium with Python, Xpath, Regex, MySQL.</p>
             </div>
 
-            <div class="experience-card">
+            <div class="experience-card-firstrow">
                 <h2 class="company">MSys Technologies</h2>
                 <h3 class="role">Role: Senior Software Engineer</h3>
                 <img src="./Img/Work/Msys.png" class="MSys-logo" alt="MSys logo">
@@ -84,8 +84,8 @@
         </div>
 
         <!-- Second Row: Ideas2IT, Relevantz -->
-        <div class="experience-section">
-            <div class="experience-card">
+         <div class="experience-section">  
+            <div class="experience-card-secondrow-left">  <!--just splitted this section as first row and second row for container alignment, we can give universal class name if get even container list. -->
                 <h2 class="company">Ideas2IT Technologies</h2>
                 <h3 class="role">Role: Technical Analyst</h3>
                 <img src="./Img/Work/Ideas2it_logo.png" class="Ideas2IT-logo" alt="Ideas2IT logo">
@@ -107,7 +107,7 @@
                 <p><strong>Tech Stack:</strong> Python, Flask, MySQL, Swagger, AWS (Lambda, ECR, ECS), Docker.</p>
             </div>
 
-            <div class="experience-card">
+            <div class="experience-card-secondrow-right">
                 <h2 class="company">Relevantz Technology</h2>
                 <h3 class="role">Role: Lead Python Engineer</h3>
                 <img src="./Img/Work/Relevantz_Logo.png" class="Relevantz-logo" alt="Relevantz logo">
