Layouts and contents are completed, color code is in pending

--- a/Landing.html
+++ b/Landing.html
@@ -38,9 +38,9 @@
     </section>
 
     <div class="social-icons">
-        <a href="https://github.com" target="_blank"><i class='bx bxl-github' ></i></a>
-        <a href="https://linkedin.com" target="_blank"><i class='bx bxl-linkedin'></i></a>
-        <a href="https://gmail.com" target="_blank"><i class='bx bxl-gmail' ></i></a>
+        <a href="https://github.com/VimalAnnamalai78" target="_blank"><i class='bx bxl-github' ></i></a>
+        <a href="https://www.linkedin.com/in/vimalannamalai7" target="_blank"><i class='bx bxl-linkedin'></i></a>
+        <a href="mailto:passivevimal@gmail.com" target="_blank"><i class='bx bxl-gmail' ></i></a>
        
     </div>
 
