changed colors in all page, yet to be finalised

--- a/Landing.html
+++ b/Landing.html
@@ -13,15 +13,15 @@
     
     <nav>
         <div class="logo">
-            <h1>Vimal Annamalai</h1>
+            <h1>Vimal <span class="logo-highlight">Annamalai</span></h1>
         </div>
         <ul class="navbar">
-            <li><a href="#home" style="--i:1;" class="active">Home</a></li>
-            <li><a href="about.html" style="--i:2;">About</a></li>
-            <li><a href="work.html" style="--i:3;">Work</a></li>
-            <li><a href="skills.html" style="--i:4;">Skills</a></li>
-            <li><a href="contact.html" style="--i:5;">Contact</a></li>
-            <li><a href="./Img/RESUME VIMAL-UK.pdf" download class="btn-download" style="--i:6;">Download CV</a></li>
+            <li><a href="#home" style="--i:1;" class="active"><b>Home</b></a></li>
+            <li><a href="about.html" style="--i:2;"><b>About</b></a></li>
+            <li><a href="work.html" style="--i:3;"><b>Work</b></a></li>
+            <li><a href="skills.html" style="--i:4;"><b>Skills</b></a></li>
+            <li><a href="contact.html" style="--i:5;"><b>Contact</b></a></li>
+            <li><a href="./Img/RESUME VIMAL-UK.pdf" download class="btn-download" style="--i:6;"><b>Download CV</b></a></li>
         </ul>
     </nav>
 
@@ -31,8 +31,7 @@
             <h2><span class="multiple-text">Python Developer</span></h2>
             <p>Proficient in leveraging Python's versatility across diverse domains including data science, web development, and automation. Possessing a strong foundation in core Python concepts and a deep understanding of popular frameworks like Django and Flask..</p>
             <div class="hero-buttons">
-                <a href="#hire" class="btn-primary">Hire Me</a>
-                <a href="#talk" class="btn-secondary">Let's Talk</a>
+                <a href="./contact.html" class="btn-primary"><b>Let's Talk</b></a>
             </div>
         </div>
     </section>
