--- a/work.html
+++ b/work.html
@@ -9,7 +9,7 @@
 
 <body>
     <div class="container-wrapper">
-        <h1 class="section-title">My Working Experience</h1>
+        <h1 class="section-title">My <span class="working-highlight">Working</span> Experience</h1>
         <!-- First Row: Wipro, Mobius, MSys -->
         <div class="experience-section">  
             <div class="experience-card-firstrow"> <!--just splitted this section as first row and second row for container alignment, we can give universal class name if get even container list. -->
@@ -24,7 +24,7 @@
                 <p class="years">Jun 2014 - Oct 2016</p>
                 <hr>
                 <p class="project-description">
-                    Client was a South African Bank (Standard Bank of South Africa (SBSA)). We built a tool called Support Automation & the objective of this project was to automate the support teams' day-to-day process like Daily Health check, Incident allocation, Transaction Fix Analysis & other transaction-related work.
+                    Client was a South African Bank (Standard Bank of South Africa (SBSA). We built a tool called Support Automation & the objective of this project was to automate the support teams' day-to-day process like Daily Health check, Incident allocation, Transaction Fix Analysis & other transaction-related work.
                 </p>
                 <ul>
                     <li>Automated the POS Transaction process.</li>
@@ -35,7 +35,7 @@
                     <li>Automated the Account details Extraction.</li>
                     <li>Deploying latest builds between Banking Servers.</li>
                 </ul>
-                <p><strong>Tech Stack:</strong> Python, Django, REXX, DB2, HTML, SQL, JCL, ATM Servers.</p>
+                <p><strong class="techstack-highlight">Tech Stack:</strong> Python, Django, REXX, DB2, HTML, SQL, JCL, ATM Servers.</p>
             </div>
 
             <div class="experience-card-firstrow">
@@ -56,7 +56,7 @@
                     <li>Automated Spider Scripts for E-commerce websites like Walmart, Kmart, Target.com etc.</li>
                     <li>Contributed to building the Job Execution Service & Integrated third-party Captcha API services.</li>
                 </ul>
-                <p><strong>Tech Stack:</strong> Scrapy & Selenium with Python, Xpath, Regex, MySQL.</p>
+                <p><strong class="techstack-highlight">Tech Stack:</strong> Scrapy & Selenium with Python, Xpath, Regex, MySQL.</p>
             </div>
 
             <div class="experience-card-firstrow">
@@ -79,7 +79,7 @@
                     <li>Generated dashboards & reports using Tableau Visualization Tool for QA Teams.</li>
                     <li>Parallelly involved in enhancement-related development & bug fixing in Zeus Application.</li>
                 </ul>
-                <p><strong>Tech Stack:</strong> Python, Django, Flask, Kafka, Jenkins, Docker, MySQL, MongoDB.</p>
+                <p><strong class="techstack-highlight">Tech Stack:</strong> Python, Django, Flask, Kafka, Jenkins, Docker, MySQL, MongoDB.</p>
             </div>
         </div>
 
@@ -104,7 +104,7 @@
                     <li>Designing the Database schema for Pricing Prediction Frameworks.</li>
                     <li>Responsible for Pricing Prediction Framework Deployments.</li>
                 </ul>
-                <p><strong>Tech Stack:</strong> Python, Flask, MySQL, Swagger, AWS (Lambda, ECR, ECS), Docker.</p>
+                <p><strong class="techstack-highlight">Tech Stack:</strong> Python, Flask, MySQL, Swagger, AWS (Lambda, ECR, ECS), Docker.</p>
             </div>
 
             <div class="experience-card-secondrow-right">
@@ -125,7 +125,7 @@
                     <li>Contributing to micro-feature development for diverse clients.</li>
                     <li>Mentoring and guidance to the development team from the vendor side.</li>
                 </ul>
-                <p><strong>Tech Stack:</strong> Python, Flask, Oracle, Snowflake, Redis.</p>
+                <p><strong class="techstack-highlight">Tech Stack:</strong> Python, Flask, Oracle, Snowflake, Redis.</p>
             </div>
         </div>
     </div>
