changed css in all pages

--- a/work.html
+++ b/work.html
@@ -9,7 +9,7 @@
 
 <body>
     <div class="container-wrapper">
-        <h1 class="section-title">My <span class="working-highlight">Working</span> Experience</h1>
+        <h1 class="section-title">My <span class="working-highlight">Work</span> Experience</h1>
         <!-- First Row: Wipro, Mobius, MSys -->
         <div class="experience-section">  
             <div class="experience-card-firstrow"> <!--just splitted this section as first row and second row for container alignment, we can give universal class name if get even container list. -->
@@ -24,7 +24,7 @@
                 <p class="years">Jun 2014 - Oct 2016</p>
                 <hr>
                 <p class="project-description">
-                    Client was a South African Bank (Standard Bank of South Africa (SBSA). We built a tool called Support Automation & the objective of this project was to automate the support teams' day-to-day process like Daily Health check, Incident allocation, Transaction Fix Analysis & other transaction-related work.
+                    Client was a South African Bank (Standard Bank of South Africa (SBSA) ). We built a tool called Support Automation & the objective of this project was to automate the support teams' day-to-day process like Daily Health check, Incident allocation, Transaction Fix Analysis & other transaction-related work.
                 </p>
                 <ul>
                     <li>Automated the POS Transaction process.</li>
