--- a/skills.html
+++ b/skills.html
@@ -25,87 +25,87 @@
         <!-- Backend Skills -->
             <div class="skill-card backend">
                 <img src="Img/Python_logo.svg" alt="Python">
-                <p class="skillname" style="font-weight: bold;">Python</p>
+                <p>Python</p>
             </div>
             <div class="skill-card backend">
                 <img src="Img/Django_logo.svg" alt="Django">
-                <p class="skillname" style="font-weight: bold;">Django</p>
+                <p>Django</p>
             </div>
             <div class="skill-card backend">
                 <img src="Img/Flask_logo.svg" alt="Flask">
-                <p class="skillname" style="font-weight: bold;">Flask</p>
+                <p>Flask</p>
             </div>
             <div class="skill-card backend">
                 <img src="Img/FastApi_logo.svg" alt="FastAPI">
-                <p class="skillname" style="font-weight: bold;">FastAPI</p>
+                <p>FastAPI</p>
             </div>
             <div class="skill-card backend">
                 <img src="Img/Swagger_logo.svg" alt="Swagger">
-                <p class="skillname" style="font-weight: bold;">Swagger</p>
+                <p>Swagger</p>
             </div>
-            <div class="skill-card backend scrapy">
+            <div class="skill-card backendscrapy">
                 <img src="Img/Scrapy_logo.svg" alt="Scrapy">
-                <p class="skillname" style="font-weight: bold;">Scrapy</p>
+                <p>Scrapy</p>
             </div>
             <div class="skill-card backend">
                 <img src="Img/Github_logo.svg" alt="GitHub">
-                <p class="skillname" style="font-weight: bold;">GitHub</p>
+                <p>GitHub</p>
             </div>
             <div class="skill-card backend">
                 <img src="./Img/jenkins_logo.svg" alt="Jenkins">
-                <p class="skillname" style="font-weight: bold;">Jenkins</p>
+                <p>Jenkins</p>
             </div>
             <div class="skill-card backend">
                 <img src="Img/Docker_Logo.svg" alt="Docker">
-                <p class="skillname" style="font-weight: bold;">Docker</p>
+                <p>Docker</p>
             </div>
             <div class="skill-card backend">
                 <img src="Img/Kafka_logo.svg" alt="Kafka">
-                <p class="skillname" style="font-weight: bold;">Kafka</p>
+                <p>Kafka</p>
             </div>
             <div class="skill-card backend">
                 <img src="Img/Redis_logo.svg" alt="Redis">
-                <p class="skillname" style="font-weight: bold;">Redis</p>
+                <p>Redis</p>
             </div>
             <div class="skill-card backend">
                 <img src="Img/Mysql_logo.svg" alt="MySQL">
-                <p class="skillname" style="font-weight: bold;">MySQL</p>
+                <p>MySQL</p>
             </div>
             <div class="skill-card backend">
                 <img src="Img/Postgresql_logo.svg" alt="PostgreSQL">
-                <p class="skillname" style="font-weight: bold;">PostgreSQL</p>
+                <p>PostgreSQL</p>
             </div>
             <div class="skill-card backend">
                 <img src="Img/mongodb_logo.svg" alt="MongoDB">
-                <p class="skillname" style="font-weight: bold;">MongoDB</p>
+                <p>MongoDB</p>
             </div>
 
             <div class="skill-card backend">
                 <img src="Img/Tableau_logo.svg" alt="Tableau">
-                <p class="skillname" style="font-weight: bold;">Tableau</p>
+                <p>Tableau</p>
             </div>
             <div class="skill-card backend">
                 <img src="Img/AWS_logo.svg" alt="AWS Services">
-                <p class="skillname" style="font-weight: bold;">AWS Services</p>
+                <p>AWS Services</p>
             </div>
 
               <!-- Frontend Skills -->
               <div class="skill-card frontend">
                 <img src="./Img/Html_logo.svg" alt="HTML">
 
-                <p class="skillname" style="font-weight: bold;">HTML</p>
+                <p>HTML</p>
             </div>
             <div class="skill-card frontend">
                 <img src="./Img/Css-Logo.svg" alt="CSS">
-                <p class="skillname" style="font-weight: bold;">CSS</p>
+                <p>CSS</p>
             </div>
             <div class="skill-card frontend">
                 <img src="./Img/Js_logo.svg" alt="JavaScript">
-                <p class="skillname" style="font-weight: bold;">JavaScript</p>
+                <p>JavaScript</p>
             </div>
             <div class="skill-card frontend">
                 <img src="Img/React_logo.svg" alt="ReactJS">
-                <p class="skillname" style="font-weight: bold;">ReactJS</p>
+                <p>ReactJS</p>
             </div>
         </div>
     </div>
