completed all the pages, static and responsive is pending

--- a/Landing.html
+++ b/Landing.html
@@ -25,6 +25,8 @@
         </ul>
     </nav>
 
+
+
     <section class="hero">
         <div class="hero-content">
             <h1>Hi, I'm Vimal Annamalai</h1>
@@ -35,6 +37,9 @@
             </div>
         </div>
     </section>
+    <div class="vimal_home">
+        <img src="./Img/Vimal_aboutme2.png" alt="Vimal_image">
+    </div>
 
     <div class="social-icons">
         <a href="https://github.com/VimalAnnamalai78" target="_blank"><i class='bx bxl-github' ></i></a>
