--- a/about.html
+++ b/about.html
@@ -9,21 +9,23 @@
 </head>
 <body>
     <div class="about-container">
-        <h2>About Core Competencies</h2>
+        <h2>About <span class="core-highlight">Core</span> Competencies</h2>
         <div class="buttons">
             <button id="aboutMeBtn" class="active" onclick="showContent('aboutMe')">About Me</button>
             <button id="coreCompetenciesBtn" onclick="showContent('coreCompetencies')">Core Competencies</button>
+            <button id="LeadershipBtn" onclick="showContent('Leadership')"> Leadership</button>
+            
         </div>
         <div class="about-content">
             <div class="about-image">
-                <img src="./Img/Vimal_aboutme.png" alt="About Me Photo">
+                <img src="./Img/Vimal_aboutme2.png" alt="About Me Photo">
             </div>
             <div id="contentSection" class="content-section">
                 <div id="aboutMe" class="content active">
                     <ul>
-                        <li>Hello! My name is Vimal Annamalai. I enjoy creating things that live on the internet.</li>
-                        <li>I am a seasoned Python Developer with over 10 years of experience, specializing in process automation, web application development, and data-driven solutions.</li>
-                        <li>My expertise lies in leveraging Python's capabilities across various domains, including financial services, data analysis, and cloud infrastructure.</li>
+                        <li>Hello! My name is <strong>Vimal Annamalai</strong> I enjoy creating things that live on the internet.</li>
+                        <li>I am a seasoned <strong>Python Developer</strong> with over <strong>10 years of experience</strong> specializing in process automation, web application development, and data-driven solutions.</li>
+                        <li>My expertise lies in leveraging Python's capabilities across various domains, including <strong>financial services, data analysis, and cloud infrastructure.</strong></li>
                         <li>I am passionate about creating scalable, maintainable, and efficient software solutions that drive business success.</li>
                         <li>As I begin the next chapter of my career, I am excited to continue learning and growing as a Developer.</li>
                     </ul>
@@ -34,6 +36,15 @@
                         <li><strong>Web Frameworks & Libraries:</strong> Proficient in Django, Flask, FastAPI, Scrapy, Click, Boto3, Pandas, Requests, BeautifulSoup, Lxml, Alembic, and Poetry. Applied SOLID principles and design patterns to build robust web applications, automation tools, and data processing pipelines.</li>
                         <li><strong>Database Management:</strong> Skilled in using Django ORM, SQLAlchemy, and Alembic for database interactions, with hands-on experience in MySQL, PostgreSQL, and MongoDB.</li>
                         <li><strong>Cloud & DevOps:</strong> Hands-on experience with AWS services including EC2, ECS, ECR, Lambda, S3, ELB, API Gateway, CloudWatch, Athena, Glue, and Kafka. Proficient in CI/CD pipelines using Jenkins, Docker, GitHub Actions, and Poetry to automate deployments and ensure continuous integration.</li>
+                    </ul>
+                </div>
+
+                <div id="Leadership" class="content">
+                    <ul>
+                        <li><strong>Process Automation & Application Development:</strong> Led automation initiatives using core Python, enhancing efficiency and reducing manual tasks. Contributed to both application development and process automation across various domains.</li>
+                        <li><strong>Agile, Scrum & Collaborative Development:</strong> Experienced in working within Agile and Scrum methodologies, collaborating closely with cross-functional teams, including business analysts and QA teams, to develop and enhance features for various applications.</li>
+                        <li><strong>Support & Rotational Admin Roles:</strong> Actively participated in rotational admin roles, providing timely resolution of bugs, addressing requests, and ensuring the smooth operation of deployed applications.</li>
+                       
                     </ul>
                 </div>
             </div>
